Add SIWA service rate limits
